Proof of concept migration to modular JDK 11.